--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^3.4.3"
   }
 }
