--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "homepage": "https://endrexakoto.github.io/portfolio/",
+  "homepage": ".",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "ajv": "^8.13.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
+    "ajv": "8.13.0",
+    "react": "18.0.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "4.12.0",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.9.0",
-    "typescript": "^5.4.5",
-    "web-vitals": "^2.1.4"
+    "react-scroll": "1.9.3",
+    "web-vitals": "4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -43,8 +37,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "gh-pages": "^6.3.0",
-    "tailwindcss": "^3.4.3"
+    "@testing-library/jest-dom": "5.17.0",
+    "@testing-library/react": "12.1.5",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "26.0.24",
+    "@types/react": "16.14.56",
+    "@types/react-dom": "16.9.24",
+    "typescript": "4.9.5"
   }
 }
