--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "12.1.5",
+    "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "26.0.24",
     "@types/react": "16.14.56",
