update to porfolio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
     "cSpell.words": [
-        "predeploy"
+        "adruino",
+        "Argriland",
+        "CCNA",
+        "ciscoccna",
+        "edgeimpulse",
+        "githubstatsapps",
+        "predeploy",
+        "rasberry",
+        "sqllite",
+        "Telemedicine"
     ]
 }
